--- a/indexmod.html
+++ b/indexmod.html
@@ -15,7 +15,7 @@
    
 	<hr>
 
-	<main class="container">
+	<main class="container container-fluid">
 		<div class="row">
 			<section class="col-12 bg-primary" id="bloc1">
 				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus ipsam ab repellendus dolorem numquam 
@@ -51,15 +51,37 @@
 						<section class="col-6 col-sm-4 bg-danger custom-block" id="bloc6">
 							<p>Bloc6 - Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>	
 						</section>
-						<section class="col-12 col-sm9 bg-danger custom-block" id="bloc7">
-							<p>Bloc7 - Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+						<section class="col-12 col-sm9 d-none d-sm-block bg-danger custom-block" id="bloc7">
+							<p>Bloc7 - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum 
+								dolor sit, amet consectetur adipisicing elit. Dolor voluptas quisquam, ut 
+								voluptatibus earum necessitatibus eum, praesentium nam, fugit doloremque esse 
+								eveniet sunt dolore culpa obcaecati dolorum laborum placeat consequuntur?</p>
 						</section>
-						<section class="col-12 col-sm6 bg-danger custom-block" id="Bloc8">
-							<p>Bloc8 - Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-						</section>
+						
+						
 					</div>
 				</main>
 			</section>
+		</div>
+	</main>
+	<main class="container container-fluid">
+		<div class="row">
+			<section class="col-6  d-block d-sm-none bg-danger custom-block" id="bloc7bis">
+				<p>bloc7bis - Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum 
+					dolor sit, amet consectetur adipisicing elit. Dolor voluptas quisquam, ut 
+					voluptatibus earum necessitatibus eum, praesentium nam, fugit doloremque esse 
+					eveniet sunt dolore culpa obcaecati dolorum laborum placeat consequuntur?</p>
+			</section>
+			<section class="col-6 col-sm-12 bg-primary" id="bloc8">
+				<p>Bloc 8 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus ipsam ab repellendus dolorem numquam 
+					provident omnis pariatur, delectus sapiente, recusandae alias quia amet consequatur sed sit odio 
+					voluptatum magni corrupti? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate omnis 
+					veniam ducimus corporis aperiam vitae porro, obcaecati molestias sunt molestiae quia error consectetur 
+					cumque, asperiores alias sequi! Temporibus, dolorem vitae.</p>
+			</section>    
+		</div>
+	</main>
+
 	<hr>
 
 
